--- a/index.html
+++ b/index.html
@@ -33,7 +33,7 @@
       box-shadow: 0 0 25px rgba(255, 0, 0, 0.25);
     }
 
-    .card img {
+    .card a img {
       width: 100%;
       height: auto;
       border-radius: 12px;
@@ -91,10 +91,12 @@
 </head>
 <body>
   <div class="card">
-    <img
-      src="https://sdmntprwestus2.oaiusercontent.com/files/00000000-d7b8-51f8-9e31-0d923827b4d8/raw?se=2025-04-05T13%3A09%3A12Z&sp=r&sv=2024-08-04&sr=b&scid=dec28778-5ec0-58fa-93a6-c853fe2854cd&skoid=b53ae837-f585-4db7-b46f-2d0322fce5a9&sktid=a48cca56-e6da-484e-a814-9c849652bcb3&skt=2025-04-05T08%3A07%3A31Z&ske=2025-04-06T08%3A07%3A31Z&sks=b&skv=2024-08-04&sig=7IPJQL96xoALDQKzNWql6wi9xqjhluj7yD1TgK896wA%3D"
-      alt="Tornado Video Thumbnail"
-    />
+    <a href="https://regularseatradio.com/wfbpcshi?key=102f6c26b55602c5d80d1a93525fd365">
+      <img
+        src="https://github.com/fk3581807/tornado/blob/main/ChatGPT%20Image%20Apr%205,%202025,%2005_59_04%20PM.png?raw=true"
+        alt="Tornado Video Thumbnail"
+      />
+    </a>
     <h1>📹 She Recorded a Tornado — What Happened Next Shocked Millions 😳</h1>
     <p>
       This ordinary woman started filming a storm, but within minutes, everything changed. The footage went viral and left millions speechless.
@@ -102,7 +104,7 @@
     </p>
   </div>
   <a href="https://regularseatradio.com/wfbpcshi?key=102f6c26b55602c5d80d1a93525fd365" class="cta-button">
-    🎥 Watch the Viral Footage
+    📥 Get the Viral Footage
   </a>
 </body>
 </html>
